AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-DCUR_WORKING_DIR='"@BASE_CUR_WORKING_DIR@/lout"'

noinst_LIBRARIES = liblout.a

liblout_a_SOURCES = \
	container.cc \
	container.hh \
	debug.hh \
	identity.cc \
	identity.hh \
	misc.cc \
	misc.hh \
	object.cc \
	object.hh \
	signal.cc \
	signal.hh \
	unicode.cc \
	unicode.hh \
	msg.h
