AM_CFLAGS = @LIBFLTK_CFLAGS@
AM_CXXFLAGS = @LIBFLTK_CXXFLAGS@

noinst_PROGRAMS = \
	dw-anchors-test \
	dw-example \
	dw-find-test \
	dw-links \
	dw-links2 \
	dw-images-simple \
	dw-images-scaled \
	dw-images-scaled2 \
	dw-lists \
	dw-table-aligned \
	dw-table \
	dw-border-test \
	dw-imgbuf-mem-test \
	dw-resource-test \
	dw-ui-test \
	fltk-browser \
	shapes

dw_anchors_test_SOURCES = dw_anchors_test.cc
dw_anchors_test_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_example_SOURCES = dw_example.cc
dw_example_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_find_test_SOURCES = dw_find_test.cc
dw_find_test_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_links_SOURCES = dw_links.cc
dw_links_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_links2_SOURCES = dw_links2.cc
dw_links2_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_images_simple_SOURCES = dw_images_simple.cc
dw_images_simple_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_images_scaled_SOURCES = dw_images_scaled.cc
dw_images_scaled_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_images_scaled2_SOURCES = dw_images_scaled2.cc
dw_images_scaled2_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_lists_SOURCES = dw_lists.cc
dw_lists_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_table_aligned_SOURCES = dw_table_aligned.cc
dw_table_aligned_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_table_SOURCES = dw_table.cc
dw_table_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_border_test_SOURCES = dw_border_test.cc
dw_border_test_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@


dw_imgbuf_mem_test_SOURCES = dw_imgbuf_mem_test.cc
dw_imgbuf_mem_test_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_resource_test_SOURCES = dw_resource_test.cc
dw_resource_test_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

dw_ui_test_SOURCES = \
	dw_ui_test.cc \
	form.cc \
	form.hh
dw_ui_test_LDADD = \
	../dw/libDw-widgets.a \
	../dw/libDw-fltk.a \
	../dw/libDw-core.a \
	../lout/liblout.a \
	@LIBFLTK_LIBS@

fltk_browser_SOURCES = fltk_browser.cc
fltk_browser_LDADD = @LIBFLTK_LIBS@

shapes_SOURCES = shapes.cc
shapes_LDADD = \
	../dw/libDw-core.a \
	../lout/liblout.a
