AM_CPPFLAGS = \
	-I$(top_srcdir)
AM_CFLAGS = @LIBFLTK_CFLAGS@
AM_CXXFLAGS = @LIBFLTK_CXXFLAGS@

noinst_PROGRAMS = \
	dw-anchors-test \
	dw-example \
	dw-find-test \
	dw-links \
	dw-links2 \
	dw-image-background \
	dw-images-simple \
	dw-images-scaled \
	dw-images-scaled2 \
	dw-lists \
	dw-table-aligned \
	dw-table \
	dw-border-test \
	dw-imgbuf-mem-test \
	dw-resource-test \
	dw-ui-test \
	containers \
	shapes \
	cookies \
	liang \
	trie \
	notsosimplevector \
	unicode-test

dw_anchors_test_SOURCES = dw_anchors_test.cc
dw_anchors_test_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_example_SOURCES = dw_example.cc
dw_example_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_find_test_SOURCES = dw_find_test.cc
dw_find_test_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_links_SOURCES = dw_links.cc
dw_links_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_links2_SOURCES = dw_links2.cc
dw_links2_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_image_background_SOURCES = dw_image_background.cc
dw_image_background_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_images_simple_SOURCES = dw_images_simple.cc
dw_images_simple_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_images_scaled_SOURCES = dw_images_scaled.cc
dw_images_scaled_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_images_scaled2_SOURCES = dw_images_scaled2.cc
dw_images_scaled2_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_lists_SOURCES = dw_lists.cc
dw_lists_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_table_aligned_SOURCES = dw_table_aligned.cc
dw_table_aligned_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_table_SOURCES = dw_table.cc
dw_table_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_border_test_SOURCES = dw_border_test.cc
dw_border_test_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@


dw_imgbuf_mem_test_SOURCES = dw_imgbuf_mem_test.cc
dw_imgbuf_mem_test_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_resource_test_SOURCES = dw_resource_test.cc
dw_resource_test_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

dw_ui_test_SOURCES = \
	dw_ui_test.cc \
	form.cc \
	form.hh
dw_ui_test_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

shapes_SOURCES = shapes.cc
shapes_LDADD = \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a

containers_SOURCES = containers.cc
containers_LDADD = $(top_builddir)/lout/liblout.a

cookies_SOURCES = cookies.c
cookies_LDADD = \
	$(top_builddir)/dpip/libDpip.a \
	$(top_builddir)/dlib/libDlib.a

liang_SOURCES = liang.cc

liang_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

trie_SOURCES = trie.cc

trie_LDADD = \
	$(top_builddir)/dw/libDw-widgets.a \
	$(top_builddir)/dw/libDw-fltk.a \
	$(top_builddir)/dw/libDw-core.a \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@

notsosimplevector_SOURCES = notsosimplevector.cc

notsosimplevector_LDADD = $(top_builddir)/lout/liblout.a

unicode_test_SOURCES = unicode_test.cc

unicode_test_LDADD = \
	$(top_builddir)/lout/liblout.a \
	@LIBFLTK_LIBS@ @LIBX11_LIBS@
